# GEOS-LNCC

./: .gitignore  .integrated_tests.yaml  BASELINE_NOTES.md  COPYRIGHT  README.md
.github/: CODEOWNERS
src/coreComponents/physicsSolvers/: CMakeLists.txt  FieldStatisticsBase.hpp  KernelLaunchSelectors.hpp  LinearSolverParameters.cpp  LinearSolverParameters.hpp  LogLevelsInfo.hpp  NonlinearSolverParameters.cpp  NonlinearSolverParameters.hpp  PhysicsSolverBase.cpp  PhysicsSolverBase.hpp  PhysicsSolverBaseKernels.hpp  PhysicsSolverManager.cpp  PhysicsSolverManager.hpp  PhysicsSolvers.rst  SolverStatistics.cpp  SolverStatistics.hpp
src/coreComponents/physicsSolvers/fluidFlow/: CMakeLists.txt  CompositionalMultiphaseBase.cpp  CompositionalMultiphaseBase.hpp  CompositionalMultiphaseBaseFields.hpp  CompositionalMultiphaseFVM.cpp  CompositionalMultiphaseFVM.hpp  CompositionalMultiphaseFVMKernel_isothermal.cpp.template  CompositionalMultiphaseFVMKernel_thermal.cpp.template  CompositionalMultiphaseHybridFVM.cpp  CompositionalMultiphaseHybridFVM.hpp  CompositionalMultiphaseHybridFVMKernels_assembly.cpp.template  CompositionalMultiphaseHybridFVMKernels_flux.cpp.template  CompositionalMultiphaseHybridFVMKernels_upwinding.cpp.template  CompositionalMultiphaseStatistics.cpp  CompositionalMultiphaseStatistics.hpp  CompositionalMultiphaseUtilities.hpp  FlowSolverBase.cpp  FlowSolverBase.hpp  FlowSolverBaseFields.hpp  ImmiscibleMultiphaseFlow.cpp  ImmiscibleMultiphaseFlow.hpp  ImmiscibleMultiphaseFlowFields.hpp  LogLevelsInfo.hpp  ReactiveCompositionalMultiphaseOBL.cpp  ReactiveCompositionalMultiphaseOBL.hpp  ReactiveCompositionalMultiphaseOBLFields.hpp  ReactiveCompositionalMultiphaseOBLKernels.cpp.template  SinglePhaseBase.cpp  SinglePhaseBase.hpp  SinglePhaseBaseFields.hpp  SinglePhaseFVM.cpp  SinglePhaseFVM.hpp  SinglePhaseHybridFVM.cpp  SinglePhaseHybridFVM.hpp  SinglePhaseHybridFVMKernels.cpp.template  SinglePhaseProppantBase.cpp  SinglePhaseProppantBase.hpp  SinglePhaseStatistics.cpp  SinglePhaseStatistics.hpp  SourceFluxStatistics.cpp  (+5 more)
src/coreComponents/physicsSolvers/inducedSeismicity/: CMakeLists.txt  ExplicitQDRateAndState.cpp  ExplicitQDRateAndState.hpp  ImplicitQDRateAndState.cpp  ImplicitQDRateAndState.hpp  QDRateAndStateBase.cpp  QDRateAndStateBase.hpp  QuasiDynamicEarthQuake.cpp  QuasiDynamicEarthQuake.hpp  SeismicityRate.cpp  SeismicityRate.hpp  SpringSlider.cpp  SpringSlider.hpp  inducedSeismicityFields.hpp  rateAndStateFields.hpp
src/coreComponents/physicsSolvers/multiphysics/: CMakeLists.txt  CompositionalMultiphaseReservoirAndWells.cpp  CompositionalMultiphaseReservoirAndWells.hpp  CoupledReservoirAndWellKernels.hpp  CoupledReservoirAndWellsBase.cpp  CoupledReservoirAndWellsBase.hpp  CoupledSolver.hpp  FlowProppantTransportSolver.cpp  FlowProppantTransportSolver.hpp  HydrofractureSolver.cpp  HydrofractureSolver.hpp  HydrofractureSolverKernels.hpp  MultiphasePoromechanics.cpp  MultiphasePoromechanics.hpp  MultiphasePoromechanicsConformingFractures.cpp  MultiphasePoromechanicsConformingFractures.hpp  OneWayCoupledFractureFlowContactMechanics.cpp  OneWayCoupledFractureFlowContactMechanics.hpp  PhaseFieldFractureSolver.cpp  PhaseFieldFractureSolver.hpp  PhaseFieldPoromechanicsSolver.cpp  PhaseFieldPoromechanicsSolver.hpp  PoromechanicsFields.hpp  PoromechanicsInitialization.cpp  PoromechanicsInitialization.hpp  PoromechanicsSolver.hpp  SinglePhasePoromechanics.cpp  SinglePhasePoromechanics.hpp  SinglePhasePoromechanicsConformingFractures.cpp  SinglePhasePoromechanicsConformingFractures.hpp  SinglePhasePoromechanicsEmbeddedFractures.cpp  SinglePhasePoromechanicsEmbeddedFractures.hpp  SinglePhaseReservoirAndWells.cpp  SinglePhaseReservoirAndWells.hpp  kernelSpecs.json
src/coreComponents/physicsSolvers/python/: PySolver.cpp  PySolver.hpp  PySolverType.hpp
src/coreComponents/physicsSolvers/simplePDE/: CMakeLists.txt  LaplaceBaseH1.cpp  LaplaceBaseH1.hpp  LaplaceFEM.cpp  LaplaceFEM.hpp  LaplaceFEMKernels.hpp  PhaseFieldDamageFEM.cpp  PhaseFieldDamageFEM.hpp  PhaseFieldDamageFEMKernels.hpp  PhaseFieldPressurizedDamageFEMKernels.hpp
src/coreComponents/physicsSolvers/solidMechanics/: CMakeLists.txt  MPMSolverFields.hpp  SolidMechanicsFields.hpp  SolidMechanicsLagrangianFEM.cpp  SolidMechanicsLagrangianFEM.hpp  SolidMechanicsMPM.cpp  SolidMechanicsMPM.hpp  SolidMechanicsStateReset.cpp  SolidMechanicsStateReset.hpp  SolidMechanicsStatistics.cpp  SolidMechanicsStatistics.hpp  kernelSpecs.json
src/coreComponents/physicsSolvers/surfaceGeneration/: CMakeLists.txt  EmbeddedSurfaceGenerator.cpp  EmbeddedSurfaceGenerator.hpp  EmbeddedSurfacesParallelSynchronization.cpp  EmbeddedSurfacesParallelSynchronization.hpp  LogLevelsInfo.hpp  ParallelTopologyChange.cpp  ParallelTopologyChange.hpp  ParallelTopologyChangeNoFixup.cpp  SurfaceGenerator.cpp  SurfaceGenerator.hpp  SurfaceGeneratorFields.hpp
src/coreComponents/physicsSolvers/wavePropagation/: CMakeLists.txt  LogLevelsInfo.hpp
src/coreComponents/unitTests/: CMakeLists.txt
src/coreComponents/unitTests/constitutiveTests/: CMakeLists.txt  constitutiveTestHelpers.hpp  testCO2BrinePVTModels.cpp  testCO2SpycherPruessModels.cpp  testCapillaryPressure.cpp  testDamage.cpp  testPVT.cpp  testPVT_CO2Brine.xml  testPVT_CO2BrineTables.xml  testPVT_CO2BrineTables_testCo2BrinePhillipsMixtureB.txt  testPVT_CO2Brine_testCo2BrinePhillipsMixtureB.txt  testPVT_CompositionalPhillipsBrine.xml  testPVT_CompositionalPhillipsBrine_brine.txt  testPVT_ThreePhaseCompositional.xml  testReactiveFluid.cpp  testRelPerm.cpp  testRelPermHysteresis.cpp  testTriaxial.cpp
src/coreComponents/unitTests/dataRepositoryTests/: testGroupPath.cpp  testObjectCatalog.cpp  testRestartBasic.cpp  testRestartExtended.cpp  testWrapperHelpers.cpp  utils.hpp
src/coreComponents/unitTests/fieldSpecificationTests/: testAquiferBoundaryCondition.cpp  testFieldSpecificationsEnums.cpp  testRecursiveFieldApplication.cpp
src/coreComponents/unitTests/fileIOTests/: testHDFFile.cpp  testHDFParallelFile.cpp
src/coreComponents/unitTests/finiteVolumeTests/: testMimeticInnerProducts.cpp
(+1645 files in other folders)
